tests/sumo/spec/departure/errors/lane_given10_ignore/tripinfos.sumo.meso
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on Mon May 28 10:17:21 2018 by Eclipse SUMO Version 92ee979
This data file and the accompanying materials
are made available under the terms of the Eclipse Public License v2.0
which accompanies this distribution, and is available at
http://www.eclipse.org/legal/epl-v20.html
SPDX-License-Identifier: EPL-2.0
<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="https://sumo.dlr.de/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <additional-files value="input_routes.rou.xml,input_additional.add.xml"/>
    </input>

    <output>
        <write-license value="true"/>
        <tripinfo-output value="tripinfos.xml"/>
    </output>

    <processing>
        <ignore-route-errors value="true"/>
        <pedestrian.model value="nonInteracting"/>
    </processing>

    <report>
        <xml-validation value="never"/>
        <duration-log.disable value="true"/>
        <no-step-log value="true"/>
    </report>

    <mesoscopic>
        <mesosim value="true"/>
    </mesoscopic>

</configuration>
-->

<tripinfos xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="https://sumo.dlr.de/xsd/tripinfo_file.xsd">
    <tripinfo id="1" depart="0.00" departLane="" departPos="0.00" departSpeed="27.80" departDelay="0.00" arrival="36.00" arrivalLane="" arrivalPos="500.00" arrivalSpeed="27.80" duration="36.00" routeLength="1000.00" waitingTime="0.00" waitingCount="0" stopTime="0.00" timeLoss="0.00" rerouteNo="0" devices="tripinfo_1" vType="DEFAULT_VEHTYPE" speedFactor="1.00" vaporized=""/>
</tripinfos>
